--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -9,6 +9,7 @@
             <hr>
             <div class="px-5">
                 <h3>Welcome to the Modern Assignment Organizer</h3>
+                <p>Here you can create a TODO list of all your upcoming assignments and organize your schedule</p>
                 <p>Our team of top software engineers (1 amateur student) have dedicated themselves to creating one of the sites of all time</p>
                 <p>Check out the futuristic navbar technology by clicking the icon in the top right of your browser</p>
                 <p>Prepare to be blown away by the "seamless" routing protocols developed for your viewing pleasure</p>
