--- a/server/views/partials/footer.ejs
+++ b/server/views/partials/footer.ejs
@@ -1,6 +1,6 @@
 <!--footer-->
 <footer>
-    <nav class="navbar fixed-bottom navbar-dark NavBackground">
+    <nav class="navbar navBackground fixed-bottom navbar-dark NavBackground">
       <h6 class="navbar-text">&copy; Copyright 2024. All rights reserved</h6> <!--just Copyright-->
     </nav>
     </footer>
