--- a/server/views/Assignment/edit.ejs
+++ b/server/views/Assignment/edit.ejs
@@ -1,5 +1,5 @@
-<%- include ../Partials/header.ejs%>
-<%- include ../Partials/main_nav.ejs%>
+<%- include('../Partials/header')%>
+<%- include('../Partials/main_nav')%>
 <!--Content for the edit Operation-->
 <div class="homeBody">
     <div class="container" style="padding-top: 60px;">
@@ -47,4 +47,4 @@
         </div>
     </div>
 </div>
-<%- include ../Partials/footer.ejs%>
+<%- include('../Partials/footer')%>
