--- a/server/views/Assignment/list.ejs
+++ b/server/views/Assignment/list.ejs
@@ -1,5 +1,5 @@
-<%- include ../Partials/header.ejs%>
-<%- include ../Partials/main_nav.ejs%>
+<%- include('../Partials/header')%>
+<%- include('../Partials/main_nav')%>
 <!--Assignment Database-->
 <div class="homeBody">
     <main class="container" style="padding-top: 60px;">
@@ -77,4 +77,4 @@
         </div>
     </main>
 </div>
-<%- include ../Partials/footer.ejs%>
+<%- include('../Partials/footer')%>
