--- a/server/views/Auth/register.ejs
+++ b/server/views/Auth/register.ejs
@@ -1,5 +1,5 @@
-<%- include ../Partials/header.ejs %>
-<%- include ../Partials/main_nav.ejs %>
+<%- include('../Partials/header') %>
+<%- include('../Partials/main_nav') %>
 <div class="homeBody">
 	<main class="container" style="padding-top: 60px">
 		<!-- Message Area -->
@@ -45,4 +45,4 @@
 		</div>
 	</main>
 </div>
-<%- include ../Partials/footer.ejs %>
+<%- include('../Partials/footer') %>
