--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -1,5 +1,5 @@
-<%- include Partials/header.ejs%>
-<%- include Partials/main_nav.ejs%>
+<%- include('Partials/header')%>
+<%- include('Partials/main_nav')%>
     <!--Main content. If this was to be a complete application, I would use a separate file for this.-->
     <% if(title == "Home") { %>
         <main class="homeBody">
@@ -22,4 +22,4 @@
     <h1 style="padding-top: 60px;"><%= title %></h1>
     <p>Welcome to <%= title %></p>
     <% } %>
-<%- include Partials/footer.ejs%>
+<%- include('Partials/footer')%>
