--- a/server/views/Assignment/edit.ejs
+++ b/server/views/Assignment/edit.ejs
@@ -1,5 +1,5 @@
-<%- include('../Partials/header.ejs')%>
-<%- include('../Partials/main_nav.ejs')%>
+<%- include('../partials/header.ejs')%>
+<%- include('../partials/main_nav.ejs')%>
 <!--Content for the edit Operation-->
 <div class="homeBody">
     <div class="container" style="padding-top: 60px;">
@@ -47,4 +47,4 @@
         </div>
     </div>
 </div>
-<%- include('../Partials/footer.ejs')%>
+<%- include('../partials/footer.ejs')%>
