--- a/server/views/Auth/login.ejs
+++ b/server/views/Auth/login.ejs
@@ -1,5 +1,5 @@
-<%- include('../Partials/header.ejs') %>
-<%- include('../Partials/main_nav.ejs') %>
+<%- include('../partials/header.ejs') %>
+<%- include('../partials/main_nav.ejs') %>
 <div class="homeBody">
 	<main class="container" style="padding-top: 60px">
 		<!-- Message Area -->
@@ -39,4 +39,4 @@
 		</div>
 	</main>
 </div>
-<%- include('../Partials/footer.ejs') %>
+<%- include('../partials/footer.ejs') %>
